add kable styling

--- a/reports/sections/threats/ThreatMitigation.Rmd
+++ b/reports/sections/threats/ThreatMitigation.Rmd
@@ -16,14 +16,14 @@ This section of the Report represents a literature review conducted by Stephen F
 
 The SARA recovery planning process is fundamental to the work of this Report. This section is intended to be expanded upon as the Reproducible Reporting initiative develops. 
 
-Click here to skip to the search results with the applicable threat documents for each species.
+Click [here](#threats-results) to skip to the search results with the applicable threat documents for each species.
 
 #### ***Key terms and descriptions***
 **Threats** are defined as “any human activity or process that has caused, is causing, or may cause harm, death, or behavioral changes to a wildlife species at risk, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur. A human activity may exacerbate a natural process” [@DFO2014_Threat]. 
 
 Threats therefore encompass both natural and anthropogenic activities, and are typically required to be discussed in relation to both the species and its habitat. Threats can be both indirect (e.g., altered fire regime, reduction in prey populations, introduced species) or direct (e.g., entanglement in fishing gear) [@DFO2014_Threat]. Naturally occurring processes (e.g., aging, disease, or predation) are only considered to be threats if they have been altered by human activities, or pose a threat to a critically small or isolated population [@DFO2014_Threat]. Identifying threats and determining how they may affect each species are crucial to prioritize recovery measures and inform management decisions [@DFO2014_Threat].
 
-Threats are mentioned in many of the documents mentioned in the SARA recovery planning process (Figure \@ref(fig:sara-chart)). However, due to issues such as changes in the requirements of these documents over time, and limited species information, the level of detail for threats may be varied.
+Threats are mentioned in many of the documents mentioned in the SARA recovery planning process (Figure \@ref(fig:sara-chart). However, due to issues such as changes in the requirements of these documents over time, and limited species information, the level of detail for threats may be varied.
 
 **Mitigation** refers to the measures used to avoid, minimize, eliminate, reduce, control or offset adverse effects of each threat (adapted from the [@IAA]). 
 
@@ -130,16 +130,16 @@ Management Plans included in Table \@ref(tab:sara-table) were obtained for each 
 *	This section of the Report focuses on documents created as part of the SARA recovery planning process. There may be other documents created by DFO that address threats and mitigation measures for the species of interest. Those were not included as they are considered outside the scope of this section of the Report.
 *	This section of the Report focuses on the ecological and biological significance of threats and mitigation measures for species at risk. However, these topics operate within the Species at Risk Act (2002) and the terms and procedures may therefore be subject to legal or judicial interpretation. Users should refer to the Act for precise definitions and descriptions of processes, if required.
 
-#### ***SARA Recovery Planning Process documents***
+#### ***SARA Recovery Planning Process documents*** {#threats-results}
 
 ```{r cosewic-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species that have been assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC) but are not currently listed in Schedule 1. Documents that are formally required by DFO as part of the SARA recovery planning process are provided, for species observed in any of the datasets within this Report  . The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Typically, only species that have been included in Schedule 1 will have Action Plans. However, multi-species Action Plans have been created by Parks Canada Agency for several National Parks or National Historic Sites and are included in the table, if they are available on the species’ SAR Public Registry. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="")
+knitr::kable(mtcars[1:5,], align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species that have been assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC) but are not currently listed in Schedule 1. Documents that are formally required by DFO as part of the SARA recovery planning process are provided, for species observed in any of the datasets within this Report  . The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Typically, only species that have been included in Schedule 1 will have Action Plans. However, multi-species Action Plans have been created by Parks Canada Agency for several National Parks or National Historic Sites and are included in the table, if they are available on the species’ SAR Public Registry. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 
 ```
 
 
 ```{r sara-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species that are listed in Schedule 1, if they have been observed in any of the datasets within this Report. Documents included are those formally required by DFO as part of the SARA recovery planning process are provided. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Recovery Strategies and Action Plans are created for species with a SARA designation of threatened, extirpated or endangered, while Management Plans are instead created for species with a SARA designation of special concern. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="")
+knitr::kable(mtcars[1:5,], align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species that are listed in Schedule 1, if they have been observed in any of the datasets within this Report. Documents included are those formally required by DFO as part of the SARA recovery planning process are provided. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Recovery Strategies and Action Plans are created for species with a SARA designation of threatened, extirpated or endangered, while Management Plans are instead created for species with a SARA designation of special concern. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 There are three available Threat assessment documents for Schedule 1 species in the Maritimes region. 
@@ -149,11 +149,11 @@ Please refer to the DFO (2014) guidelines for conducting Threat Assessments for 
 The Threat Assessment documents for each species are also provided in the Table captions. Users of the Report should refer to each species document for a full explanation of each table.
 
 ```{r mudpiddock-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Threat assessment summary for Atlantic Mud-piddock in Canadian waters based on DFO 2014 guidance (obtained from p. 12 in <https://waves-vagues.dfo-mpo.gc.ca/Library/40868308.pdf)>.", booktabs = T, escape = F, linesep="")
+knitr::kable(mtcars[1:5,], align = "l", caption = "Threat assessment summary for Atlantic Mud-piddock in Canadian waters based on DFO 2014 guidance (obtained from p. 12 in <https://waves-vagues.dfo-mpo.gc.ca/Library/40868308.pdf)>.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 ```{r leatherback-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Threat assessment for Leatherback Sea Turtles in the Broader Northwest Atlantic Population and in Atlantic Canadian waters based on DFO (2014) guidance (obtained from pp. 10-11 in <https://waves-vagues.dfo-mpo.gc.ca/Library/40949497.pdf>).", booktabs = T, escape = F, linesep="")
+knitr::kable(mtcars[1:5,], align = "l", caption = "Threat assessment for Leatherback Sea Turtles in the Broader Northwest Atlantic Population and in Atlantic Canadian waters based on DFO (2014) guidance (obtained from pp. 10-11 in <https://waves-vagues.dfo-mpo.gc.ca/Library/40949497.pdf>).", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 Notes:
 
@@ -163,7 +163,7 @@ Notes:
 
 
 ```{r loggerhead-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Threat assessment for the Loggerhead Sea Turtle in the Broader Northwest Atlantic Population and in Atlantic Canadian waters based on DFO 2014a guidance (the last three rows represent threats that occur only outside of Canada.) (obtained from p. 11 in <https://waves-vagues.dfo-mpo.gc.ca/Library/40624201.pdf>).", booktabs = T, escape = F, linesep="")
+knitr::kable(mtcars[1:5,], align = "l", caption = "Threat assessment for the Loggerhead Sea Turtle in the Broader Northwest Atlantic Population and in Atlantic Canadian waters based on DFO 2014a guidance (the last three rows represent threats that occur only outside of Canada.) (obtained from p. 11 in <https://waves-vagues.dfo-mpo.gc.ca/Library/40624201.pdf>).", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 
 ```
 Notes:
