--- a/reports/sections/isdb-marfis/isdbMarfis_en.Rmd
+++ b/reports/sections/isdb-marfis/isdbMarfis_en.Rmd
@@ -89,22 +89,35 @@ writeLines(Report_marfis)
 ```
 
 ```{r isdb-SAR-table}
-if (!is.null(outputListI$studyData)) {
-knitr::kable(isdbSarTable, align="l", caption=paste(write_caption_blurb(isdb_rr, "EN"), "Industry Survey Database (ISDB) records of species observed within the search area and listed by the <i>Species at Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(isdbSarTable)) {
+    if (nrow(isdbSarTable) > 0) {
+
+knitr::kable(isdbSarTable, align="l", caption=paste(write_caption_blurb(isdb_rr, "EN"), "Industry Survey Database (ISDB) records of species observed within the search area and listed by the <i>Species at Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+      }
+  } 
 ```
 <br><br>
 ```{r isdb-all-table}
-if (!is.null(outputListI$studyData)) {
-  knitr::kable(isdbAllTable, align="l", caption=paste(write_caption_blurb(isdb_rr, "EN"), "Industry Survey Database (ISDB) records of <u>all species</u> observed within the search area, summarized by species or species group. Records do not necessarily correspond to number of individuals. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(isdbAllTable)) {
+  if (nrow(isdbAllTable) > 0) {
+  knitr::kable(isdbAllTable, align="l", caption=paste(write_caption_blurb(isdb_rr, "EN"), "Industry Survey Database (ISDB) records of <u>all species</u> observed within the search area, summarized by species or species group. Records do not necessarily correspond to number of individuals. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    }
+  } 
 ```
 
 ```{r marfis-SAR-table}
-if (!is.null(outputListM$studyData)) {
-  knitr::kable(marfisSarTable, align="l", caption=paste(write_caption_blurb(marfis_rr, "EN"), "Maritimes Fishery Information System (MARFIS) records of species observed within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(marfisSarTable)) {
+    if (nrow(marfisSarTable) > 0) {
+  knitr::kable(marfisSarTable, align="l", caption=paste(write_caption_blurb(marfis_rr, "EN"), "Maritimes Fishery Information System (MARFIS) records of species observed within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+      }
+  } 
 ```
 <br><br>
 ```{r marfis-all-table}
-if (!is.null(outputListM$studyData)) {
-  knitr::kable(marfisAllTable, caption=paste(write_caption_blurb(marfis_rr, "EN"), "Maritimes Fishery Information System (MARFIS) records of <u>all species</u> observed within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
-} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(marfisAllTable)) {
+      if (nrow(marfisAllTable) > 0) {
+  knitr::kable(marfisAllTable, caption=paste(write_caption_blurb(marfis_rr, "EN"), "Maritimes Fishery Information System (MARFIS) records of <u>all species</u> observed within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+      }
+  }
+
 ```
