--- a/reports/sections/waste/waste_en.rmd
+++ b/reports/sections/waste/waste_en.rmd
@@ -9,10 +9,10 @@ bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ```{r waste-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
 ```
 
-```{r waste-load-common-ha, child = here::here("reports/sections/commonSections/commonHumanActivities.Rmd")}
+```{r waste-load-common-ha, child = here::here("reports/sections/commonSections/commonHA.Rmd")}
 ```
 
-```{r eval=False}
+```{r eval=FALSE}
 if (FALSE) { 
   # load in generic data, e.g.functions, study area, and base maps into the 
   # environment, when knitting, these will be loaded through the child rmd.
