corrected a typo in the bib file

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -465,7 +465,7 @@ author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
   howpublished = {Retrieved from https://laws-lois.justice.gc.ca/eng/acts/I-2.75/FullText.html}
 }
 
-@article{N,
+@article{mcdevitt2015_missing,
   title = {Missing the safety net: evidence for inconsistent and insufficient management of at-risk marine fishes in Canada},
   author = {McDevitt-Irwin, J.M. and Fuller, S.D. and Grant, C. and Baum, J.K.},
   journal = {Canadian Journal of Fisheries and Aquatic Sciences},
